--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,8 @@
   "name": "mageplaza/magento-2-italian-language-pack",
   "description": "Italian language package for Magento 2",
   "homepage": "https://www.mageplaza.com",
-  "require": {
-    "mageplaza/module-core": "^1.3.13"
-  },
   "type": "magento2-language",
+  "version": "1.0.0",
   "minimum-stability": "dev",
   "prefer-stable": true,
   "license": [
